--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.8",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
