--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.8",
+    "styled-components": "^5.2.3",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.0"
   },
