--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-scroll": "^1.8.2",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3",
     "typeface-roboto": "^1.1.13",
