--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -17,9 +17,11 @@
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-particles-js": "^3.4.1",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.2",
+    "react-spring-carousel-js": "^1.7.5",
     "sass": "^1.32.8",
     "styled-components": "^5.2.3",
     "typeface-roboto": "^1.1.13",
