--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -11,12 +11,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "bootstrap": "^4.6.0",
+    "google-map-react": "^2.1.9",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-particles-js": "^3.4.1",
+    "react-pure-render": "^1.0.2",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
