--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-particles-js": "^3.4.1",
